# KARE-Reconstructed-Models

./: README.md  copier.sh  done.sh  kare-world.world
base_template/: model.config  model.sdf
bc_01/: model.config  model.sdf
bus56/: model.config  model.sdf
bus567/: model.config  model.sdf
bus568/: model.config  model.sdf
car_bot-00/: model.config  model.sdf
dev_ws/src/articubot_one/worlds/: CMakeLists.txt  added_platform.world  ambulance_crash  ambulance_move.cc  cars-and-pathway.world  cuda_12.3.2_545.23.08_linux.run  kare-sol.world  move_car.cc  move_man.cc  obstacles.world  out.txt  path_publisher copy.cc  path_publisher.cc  saved_world.world  small_city.launch  small_city.world  smol-city.world  terrain-world.world  world_launcher.launch
dev_ws/src/articubot_one/worlds/model_move/: path_publisher.cc
hatchback_bot/: model.config  model.sdf
hatchback_bot_kare/: model copy.sdf  model.config  model.sdf
kare-bus/: model.sdf
kare-bus-2/: model.config  model.sdf
kare-bus4/: model.config  model.sdf
kare-chair/: kare-chair.sh  model.config  model.sdf
kare-containeer/: model.config  model.sdf
kare-container/: model.config  model.sdf
kare-cycle/: model.config  model.sdf
kare-cycle-2/: model.config  model.sdf
kare-cycle-3/: model.config  model.sdf
kare-cycle2/: model.config  model.sdf
kare-drum/: model.config  model.sdf
kare-dustbin/: model.config  model.sdf  model_maker.sh
kare-emptylorry/: model.config  model.sdf
kare-kar-2/: model.config  model.sdf
kare-lorry2/: model.config  model.sdf
kare-lorry3/: model.config  model.sdf
(+166 files in other folders)
